# dotfiles-py

./: .gitignore  CITATION.cff  README.md  install.sh  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_tests.txt  setup.py
.github/: .releaserc
docs/: index.md
dotfiles_py/: __init__.py  config.py
dotfiles_py/core/ansi/: __init__.py  types.py
dotfiles_py/core/types/: patterns.py
dotfiles_py/subtree/: __init__.py  cli.py  models.py
src/cfg/.dotfiles/: defaults.yml
src/etc/xdg/: user-dirs.defaults
tests/: conftest.py  test_config.py  test_subtree.py
tests/data/: .subtrees.yml
