[build-system]
requires = ["setuptools>=75.3", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles-py"
dynamic = ["version"]
description = "A tool for managing dotfiles using Python3.10+"
authors = [{name = "Ragdata", email = "ragdata@ragdata.dev"}]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["dotfiles", "dotfile-management"]
dependencies = [
    # "GitPython~=3.1",
    "PyGithub~=2.4",
    # "PyYAML~=6.0",
    "colorama==0.4.4",
    "dynaconf~=3.2",
    # "gitdb~=4.0",
    "python-box[all]~=7.0",
    "shellingham==1.4.0",
    "typer~=0.13"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Unix Shell"
]

[project.urls]
Homepage = "https://github.com/Ragdata/dotfiles-py"
#Documentation = ""
Repository = "https://github.com/Ragdata/dotfiles-py"
#Issues = ""
#Changelog = ""

[project.scripts]
subtree = "dotfiles_py.subtree.cli:app"

[project.optional-dependencies]
docs = ["mkdocs~=1.6", "termynal~=0.12", "mkdocs-material~=9.5"]
tests = ["pytest~=8.3"]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = [
    "-ra -q",
    "--import-mode=importlib"
]
pythonpath = "dotfiles_py"
testpaths = ["tests"]
